# Headhunter

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: job_match.md  job_research.md
resume/: resume.example.md
src/: main.py  report_writer.py  resume_loader.py  scraper_104.py  search_104.py  search_1111.py  searcher.py  vendor_search.py
